--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: go
 go:
   - "1.11"
 
-before_install: go version
+env:
+  - GO111MODULE=on
+
+before_install:
+  - go get -v github.com/golang/lint/golint
 
 script: go build app.go
